--- a/src/features/Head/head.css
+++ b/src/features/Head/head.css
@@ -149,17 +149,28 @@
     z-index: 100;
 }
 
+@media only screen and (min-width: 767px) {
+    .hd-cnt__right-cart>img {
+        width: 35px;
+        height: 35px;
+        margin-left: 8px;
+    }
+}
+
 .hd-cnt__right-cart-total {
     position: absolute;
     color: var(--bg-gray);
     width: 18px;
-    margin: -30px 0px 0px 16px;
+    /* margin: -30px 0px 0px 16px; */
     font-size: 12px;
     text-align: center;
     font-weight: 100;
     line-height: 18px;
     border-radius: 100%;
     background-color: var(--red-cl);
+    margin: 0;
+    top: 0;
+    right: 0;
 }
 
 .hd-cnt__right-menu {
@@ -293,6 +304,7 @@
 .hd-cnt__right-lang {
     cursor: pointer;
     padding: 8px 16px;
+    margin-left: 8px;
     position: relative;
     font-weight: 700;
     font-size: 0.875rem;
@@ -360,133 +372,114 @@
     .hd {
         padding: 28px 32px;
     }
-
     .hd-cnt__right-avatar {
         margin: 0px 18px 0px 18px;
     }
-
     .hd-logo {
         display: none;
     }
-
     .mb-back__btn {
         display: none;
     }
 }
 
+
 /* responsive */
+
+
 /* Tablet */
+
+
 /* .hd-cnt__right-user-name {
     display: none;
 } */
+
+
 /* Mobile */
+
 @media only screen and (max-width: 767px) {
     .hd {
         border-bottom: solid 1px var(--text-op);
         padding: 12px 20px;
         background-color: var(--purple);
     }
-
     .mb-back__btn {
         display: block;
         margin-left: -8px;
     }
-
     .hd-logo {
         display: none;
     }
-
     .hd-cnt__left {
         display: none;
     }
-
     .hd-cnt__right {
         width: 100%;
         justify-content: space-between;
     }
-
     .header-search {
         display: none;
     }
-
     .mb-hd-cnt__right {
         display: block;
     }
-
     .hd-cnt__right-cart {
         display: none;
     }
-
     .mb-hd-cnt__right .hd-cnt__right-cart {
         display: block;
         margin-right: 18px;
     }
-
     .hd-cnt__right-menu {
         display: none;
     }
-
     .hd-cnt__sign-btn {
         display: none;
     }
-
     .hd-cnt__right-lang {
         display: none;
     }
-
     .hd-logo {
         display: none;
     }
-
     .hd-cnt__left {
         display: none;
     }
-
     .mb-hd-cnt__right {
         display: block;
     }
-
     .hd-noti {
         display: none;
     }
-
     .hd-cnt__right-user {
         flex-direction: row-reverse;
         gap: 0 8px;
     }
-
     .hd-cnt__right-user-name {
         color: var(--bgWhite);
     }
-
     .hd-cnt__right-cart {
         display: none;
     }
-
     .mb-hd-cnt__right button {
         background-color: transparent;
         border: none;
         outline: none;
         margin-right: 8px;
     }
-
     .mb-hd-cnt__right .hd-cnt__right-cart {
         display: block;
         margin-right: 10px;
     }
-
     .hd-cnt__right-avatar {
         margin: 0px 4px;
     }
-
     .hd-cnt__right-menu {
         display: none;
     }
-
     .hd-cnt__sign-btn {
         display: none;
     }
-
     .hd-cnt__right-lang {
         display: none;
     }
