--- a/src/components/LoadingSketion/style.css
+++ b/src/components/LoadingSketion/style.css
@@ -14,51 +14,64 @@
     justify-content: space-between;
     background-color: var(--grey_2);
 }
-.result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(1){
+
+.result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(1) {
     width: 100% !important;
     height: 100% !important;
 }
-.result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(2){
+
+.result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(2) {
     height: 100px !important;
 }
-.result-orgs-loading-cnt .service-item{
+
+.result-orgs-loading-cnt .service-item {
     width: 16.6%;
     max-height: unset !important;
 }
-.result-orgs-loading-cnt-row{
+
+.result-orgs-loading-cnt-row {
     display: flex;
     overflow: scroll;
     scrollbar-width: none;
 }
-.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(1){
+
+.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(1) {
     width: 146px !important;
     height: calc(7% - 4px) !important;
 }
-.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(2){
+
+.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item .MuiSkeleton-root:nth-child(2) {
     height: auto !important;
 }
-.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item{
+
+.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item {
     height: 262px;
 }
-.result-orgs-loading-cnt-row::-webkit-scrollbar{
+
+.result-orgs-loading-cnt-row::-webkit-scrollbar {
     display: none;
 }
-.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item.service-item span{
+
+.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item.service-item span {
     width: 146px;
     height: calc(7% - 4px);
     transform: unset;
 }
-.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item.service-item span:nth-child(1){
-    height: calc(77% - 10px)!important;
+
+.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item.service-item span:nth-child(1) {
+    height: calc(77% - 10px) !important;
 }
-.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item.service-item span:nth-child(2){
+
+.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item.service-item span:nth-child(2) {
     height: calc(7% - 4px) !important;
 }
-.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item.service-item span:nth-child(4){
+
+.result-orgs-loading-cnt-row .result-orgs-loading-cnt__item.service-item span:nth-child(4) {
     height: calc(10% - 4px) !important;
 }
+
 /* load org */
-.load-org{
+.load-org {
     position: fixed;
     z-index: 10000;
     background-color: var(--white);
@@ -68,73 +81,88 @@
     height: 100vh;
     overflow-y: scroll;
 }
-.load-org-head{
+
+.load-org-head {
     width: 100%;
     height: 95px;
     background-color: var(--bg-gray);
 }
-.load-org-cnt{
+
+.load-org-cnt {
     padding-top: 32px;
 }
-.load-org-cnt__banner{
+
+.load-org-cnt__banner {
     width: 100%;
     height: 362px;
 }
-.load-org-cnt__in{
+
+.load-org-cnt__in {
     padding: 0 32px 16px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 8px;
 }
-.load-org-cnt__in-avt{
+
+.load-org-cnt__in-avt {
     width: 140px;
     height: 140px;
     border-radius: 100%;
     overflow: hidden;
 }
-.load-org-cnt__in-de{
+
+.load-org-cnt__in-de {
     padding: 20px 0px;
     width: calc(100% - 160px);
     height: 140px;
 }
-.load-org-cnt__in-de-name{
+
+.load-org-cnt__in-de-name {
     width: 100%;
     height: 28px;
     margin: 8px 0px;
 }
-.load-org-cnt__time{
+
+.load-org-cnt__time {
     margin-top: 6px;
 }
-.load-org-cnt__time-left{
+
+.load-org-cnt__time-left {
     width: 350px;
     height: 32px;
 }
-.load-org-cnt__time-right{
+
+.load-org-cnt__time-right {
     width: 324px;
     height: 42px;
 }
-.load-org-cnt__tab{
+
+.load-org-cnt__tab {
     margin-top: 6px;
 }
-.load-org-cnt__tab-item{
+
+.load-org-cnt__tab-item {
     width: 60px;
     height: 32px;
     margin-right: 16px;
 }
-.load-org-services{
+
+.load-org-services {
     padding: 28px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-.load-org-services__item{
+
+.load-org-services__item {
     width: 16.6%;
     height: 274px;
     padding: 8px;
 }
+
 /* load detail */
-.load-detail__head{
+.load-detail__head {
     margin-top: 48px;
     width: 100%;
     height: 506px;
@@ -144,92 +172,146 @@
     flex-direction: row;
     justify-content: space-between;
 }
-.load-detail__head .left{
+
+.load-detail__head .left {
     width: 450px;
     height: 450px;
 }
-.load-detail__head .right{
+
+.load-detail__head .right {
     height: 450px;
     width: calc(100% - 464px);
 }
-.load-detail__head .right .org-name{
+
+.load-detail__head .right .org-name {
     width: 80%;
     height: 20px;
 }
-.load-detail__head .right .detail-name{
+
+.load-detail__head .right .detail-name {
     width: 100%;
     height: 72px;
     margin: 8px 0px;
 }
-.load-detail__head .right .detail-rate{
+
+.load-detail__head .right .detail-rate {
     width: 50%;
     height: 18px;
     margin-top: 16px;
 }
+
+.load-detail__head .right .detail-card-cnt{
+    width: 100%;
+    height: 177px;
+    margin: 24px 0px;
+}
+.load-detail__head .right .detail-bottom{
+    width: 100%;
+    height: 40px;
+    margin-top: 74px;
+}
+.load-detail__head .right .detail-bottom .quantity{
+    height: 100%;
+    width: 110px;
+}
+.load-detail__head .right .detail-bottom .buy{
+    width: 370px;
+    height: 100%;
+}
+.load-detail__desc{
+    width: 100%;
+    height: 200px;
+    margin-top: 24px;
+}
 @media only screen and (max-width: 1023px) {
-    .result-orgs-loading-cnt__item{
+    .result-orgs-loading-cnt__item {
         width: 50%;
     }
-    .result-orgs-loading-cnt .service-item{
+
+    .result-orgs-loading-cnt .service-item {
         width: 100%;
         height: 111px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
-    .result-orgs-loading-cnt .service-item .MuiSkeleton-root:nth-child(2){
+
+    .result-orgs-loading-cnt .service-item .MuiSkeleton-root:nth-child(2) {
         display: none !important;
     }
-    .load-org-head{
+
+    .load-org-head {
         display: none;
     }
-    .load-org-cnt{
+
+    .load-org-cnt {
         padding: 0px;
     }
-    .load-org-cnt__banner{
+
+    .load-org-cnt__banner {
         height: 184px;
     }
-    .load-org-cnt__in{
+
+    .load-org-cnt__in {
         background-color: var(--grey_2);
         margin-top: 0px;
         padding: 12px 24px 0px 24px;
     }
-    .load-org-cnt__in-avt{
+
+    .load-org-cnt__in-avt {
         width: 60px;
         height: 60px;
         border: solid 1px var(--white);
     }
-    .load-org-cnt__in-de{
+
+    .load-org-cnt__in-de {
         padding: 0px;
         width: calc(100% - 64px);
         height: 90px;
     }
-    .load-org-cnt__in-de-name{
+
+    .load-org-cnt__in-de-name {
         margin: 2px 0px;
         height: 24px;
     }
-    .load-org-cnt__time{
+
+    .load-org-cnt__time {
         display: flex;
         flex-direction: column-reverse;
     }
+
     .load-org-cnt__time-right,
-    .load-org-cnt__time-left{
+    .load-org-cnt__time-left {
         width: 88%;
         margin-bottom: 6px;
     }
-    .load-org-cnt__tab-wrap{
+
+    .load-org-cnt__tab-wrap {
         width: 100%;
         overflow: scroll;
         padding-left: 12px;
     }
-    .load-org-cnt__tab{
+
+    .load-org-cnt__tab {
         width: fit-content;
     }
-    .load-org-services{
+
+    .load-org-services {
         padding: 12px 4px;
     }
-    .load-org-services__item{
+
+    .load-org-services__item {
         width: 100%;
         height: 76px;
     }
-}   
+    /* detail service */
+    .load-detail__head{
+        margin: 0px;
+        padding: 0px;
+        flex-direction: column;
+        height: fit-content;
+    }
+    .load-detail__head .right{
+       display: none;
+    }
+}
