--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -555,6 +555,7 @@
 .service-detail .service-detail__description .service-description {
     margin-bottom: 14px;
     line-height: 26px;
+    font-weight: 500;
     font-size: 16px;
     display: -webkit-box;
     -webkit-line-clamp: 3;
