--- a/src/features/MerchantDetail/style.css
+++ b/src/features/MerchantDetail/style.css
@@ -1540,7 +1540,7 @@
         border-bottom: none;
         border-top: none;
     }
-    <<<<<<< HEAD =======>>>>>>>Dev_remake .org-des-cnt {
+    .org-des-cnt {
         width: 80%;
     }
 }
