--- a/src/features/Reviews/review.css
+++ b/src/features/Reviews/review.css
@@ -209,21 +209,21 @@
     grid-gap: 0 8px;
     align-items: center;
 }
-.evaluate-comment .MuiPaper-elevation{
+.evaluate-comment .MuiPaper-elevation {
     box-shadow: none;
 }
-.evaluate-comment .MuiAccordionSummary-root{
+.evaluate-comment .MuiAccordionSummary-root {
     min-height: unset;
     height: fit-content;
 }
-.evaluate-comment .MuiAccordionSummary-content{
+.evaluate-comment .MuiAccordionSummary-content {
     margin: 0px;
 }
-.evaluate-comment .Mui-expanded{
+.evaluate-comment .Mui-expanded {
     margin: 6px 0px !important;
     min-height: unset !important;
 }
-.evaluate-comment .MuiAccordionDetails-root{
+.evaluate-comment .MuiAccordionDetails-root {
     padding: 0px;
 }
 
@@ -272,12 +272,31 @@
     font-size: 14px;
 }
 
+.evaluate-comment .comment-img__list {
+    display: grid;
+    grid-template-columns: repeat(3, 150px);
+    grid-gap: 14px;
+    margin: 8px 0;
+}
+
 .evaluate-comment .comment-img {
-    max-width: 200px;
-    max-height: 200px;
-    border-radius: 16px;
+    width: 150px;
+    height: 150px;
+    border-radius: 8px;
     overflow: hidden;
     margin: 8px 0;
+}
+.evaluate-comment .comment-img__item {
+    width: 150px;
+    height: 150px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+.evaluate-comment .comment-img img,
+.comment-img__item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .org-evaluate__cnt .total-comment {
@@ -287,10 +306,10 @@
 }
 
 .evaluate-input__upload {
-    max-width: 200px;
-    max-height: 200px;
-    height: 200px;
-    padding: 0 0 24px 24px;
+    max-width: 150px;
+    max-height: 150px;
+    height: 150px;
+    margin: 0 0 8px 24px;
     position: relative;
 }
 
@@ -298,7 +317,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 16px;
+    border-radius: 8px;
     overflow: hidden;
 }
 
@@ -334,7 +353,7 @@
 .evaluate-comment__child-item {
     background-color: var(--grey_2);
     border-radius: 12px;
-    padding: 6px;
+    padding: 24px;
     margin: 12px 0px;
 }
 
@@ -356,8 +375,10 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 16px;
+    display: block;
+    margin: 14px 0;
 }
-.evaluate-comment__child-item .time-ago{
+.evaluate-comment__child-item .time-ago {
     font-size: 10px;
     line-height: 12px;
     font-weight: 700;
@@ -387,7 +408,7 @@
     color: var(--purple);
     font-weight: 600;
 }
-.evaluate-comment__child-reply button{
+.evaluate-comment__child-reply button {
     position: absolute;
     right: 0;
     margin-right: 16px;
@@ -395,17 +416,17 @@
     outline: none;
     background-color: transparent;
 }
-.evaluate-comment__child-reply .btn-media{
+.evaluate-comment__child-reply .btn-media {
     position: absolute;
     right: 42px;
     width: 20px;
     height: 20px;
 }
-.evaluate-comment__child-reply button img{
+.evaluate-comment__child-reply button img {
     width: 18px;
     height: 18px;
 }
-.evaluate-comment__child-img{
+.evaluate-comment__child-img {
     width: 120px;
     height: 120px;
     background-color: burlywood;
@@ -428,7 +449,12 @@
 }
 
 @media only screen and (max-width: 768px) {
-
+    .evaluate-comment .comment-img__list {
+        display: grid;
+        grid-template-columns: repeat(2, 150px);
+        grid-gap: 14px;
+        margin: 8px 0;
+    }
     .evaluate-comment__body span:nth-child(2),
     .evaluate-comment__body span:nth-child(3) {
         font-size: 12px;
