--- a/src/features/Carts/style.css
+++ b/src/features/Carts/style.css
@@ -25,7 +25,6 @@
     border-radius: 6px;
 }
 
-
 .re-cart-item-group__head .left img {
     margin-right: 4px;
     height: 24px;
@@ -69,7 +68,7 @@
     padding: 2px 4px;
     border-radius: 4px;
     margin: 2px 0px 0px 4px;
-    transition: all .3s;
+    transition: all 0.3s;
 }
 
 .re-cart-item-cnt .cart-item__name-img {
@@ -280,57 +279,151 @@
 }
 
 /* cart group item voucher */
-.cart-item-pop-voucher{
-    width:45vw;
+.cart-item-pop-voucher {
+    width: 45vw;
     height: fit-content;
     max-width: 90vh;
     overflow-y: scroll;
     background-color: var(--white);
-    padding: 12px;
+    padding: 24px;
 }
-.cart-vouchers-list .list .item{
+.cart-vouchers-list .list .item {
     width: 100%;
     height: 154px;
     margin: 12px 0px;
 }
-.cart-item-voucher{
+.cart-item-voucher {
     padding: 8px 4px;
     border-bottom: solid 1px var(--bgGray);
     cursor: pointer;
 }
-.cart-item-voucher .title{
+.cart-item-voucher .title {
     font-size: 14px;
     line-height: 16px;
     font-weight: 700;
     color: var(--red-cl);
 }
-.cart-item-voucher img{
+.cart-item-voucher img {
     width: 14px;
     margin: 1px 0px 0px 6px;
 }
-.cart-item-pop-voucher .title{
+.cart-item-pop-voucher .title {
     font-size: 18px;
     line-height: 20px;
     font-weight: 700;
 }
-.cart-vouchers-list__title{
+.cart-vouchers-list {
+    margin-top: 14px;
+}
+.cart-vouchers-list__title {
     font-size: 14px;
     line-height: 16px;
     font-weight: 600;
 }
-.cart-vouchers-list__item{
-    padding: 8px;
+.cart-vouchers-list__item {
     height: 100%;
     box-shadow: 0 6px 15px #dcd8ee;
     background-color: var(--white);
     border-radius: 8px;
+    border: 1px solid var(--purple);
+    display: flex;
+    background-color: #e3e1f1;
+    /* overflow: hidden; */
 }
-.cart-vouchers-list__item-left{
+.cart-vouchers-list__item-left {
+    width: 200px;
     height: 100%;
-    width: 144px;
-    border-right: dashed 1px var(--bg-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-right: dashed 1px var(--purple);
+    position: relative;
+}
+.cart-vouchers-list__item-left::after {
+    position: absolute;
+    content: "";
+    top: -20px;
+    right: -12px;
+    border-radius: 100px;
+    overflow: hidden;
+    width: 24px;
+    height: 24px;
+    z-index: 2;
 }
 
+.cart-vouchers-list__item-left .item-left__img {
+    width: 60px;
+    height: 60px;
+    border-radius: 8px;
+    flex-shrink: 0;
+    background-color: #fff;
+}
+.cart-vouchers-list__item-left .item-left__img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.cart-vouchers-list__item-left .item-left__name {
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    font-weight: 500;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-top: 6px;
+    word-break: break-word;
+}
+.cart-vouchers-list__item-right {
+    height: 100%;
+    width: 100%;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.cart-vouchers-list__item-right .item-right__top {
+    display: flex;
+    flex-direction: column;
+    grid-gap: 4px 0;
+}
+.cart-vouchers-list__item-right .item-right__top .item-right__name {
+    font-size: 18px;
+    font-weight: bold;
+}
+.cart-vouchers-list__item-right .item-right__top .item-right__desc {
+    font-size: 14px;
+    font-weight: 500;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+}
+.cart-vouchers-list__item-right .item-right__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.cart-vouchers-list__item-right .item-right__bottom .item-right__expired {
+    font-size: 16px;
+    font-weight: 500;
+}
+.cart-vouchers-list__item-right .item-right__bottom .item-right__btn {
+    padding: 8px 16px;
+    border-radius: 8px;
+    background-color: var(--purple);
+    cursor: pointer;
+}
+.cart-vouchers-list__item-right .item-right__bottom .item-right__btn span {
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+}
 
 @media only screen and (max-width: 1023px) {
     .re-cart-cnt {
@@ -390,7 +483,7 @@
         padding: 12px;
         border: solid 1px var(--grey);
         border-radius: 8px;
-        transition: all .4s;
+        transition: all 0.4s;
     }
 
     .re-cart-item-cnt .cart-item__name-text {
@@ -506,7 +599,7 @@
         font-weight: 500;
         font-size: 12px;
         line-height: 16px;
-        color: #E64D4A;
+        color: #e64d4a;
     }
 
     .re-cart-item__discount {
