--- a/src/features/Carts/style.css
+++ b/src/features/Carts/style.css
@@ -415,7 +415,7 @@
 .cart-vouchers-list__item-right .item-right__bottom .item-right__btn {
     padding: 8px 16px;
     border-radius: 8px;
-    background-color: var(--purple);
+    background-color: var(--red-cl);
     cursor: pointer;
     user-select: none;
 }
