--- a/src/features/Carts/style.css
+++ b/src/features/Carts/style.css
@@ -289,7 +289,7 @@
 }
 .cart-vouchers-list .list .item {
     width: 100%;
-    height: 154px;
+    height: 150px;
     margin: 12px 0px;
 }
 .cart-item-voucher {
@@ -327,6 +327,7 @@
     border-radius: 8px;
     border: 1px solid transparent;
     display: flex;
+    align-items: center;
     /* overflow: hidden; */
 }
 .cart-vouchers-list__item-left {
@@ -367,7 +368,7 @@
     font-size: 12px;
     line-height: 16px;
     text-align: center;
-    font-weight: 500;
+    font-weight: 600;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -396,6 +397,7 @@
 .cart-vouchers-list__item-right .item-right__top .item-right__desc {
     font-size: 14px;
     font-weight: 500;
+    line-height: 20px;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -403,13 +405,14 @@
     text-overflow: ellipsis;
     word-break: break-word;
 }
+
 .cart-vouchers-list__item-right .item-right__bottom {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 .cart-vouchers-list__item-right .item-right__bottom .item-right__expired {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
 }
 .cart-vouchers-list__item-right .item-right__bottom .item-right__btn {
@@ -431,7 +434,35 @@
         min-height: 100vh;
         padding: 0px;
     }
+    .cart-item-pop-voucher {
+        width: 100%;
+        max-width: unset;
+        overflow-y: unset;
+        padding: 20px;
+    }
 
+    .cart-vouchers-list__item-right {
+        grid-gap: 8px 0;
+    }
+    .cart-vouchers-list__item-right .item-right__top .item-right__name {
+        font-size: 14px;
+    }
+    .cart-vouchers-list__item-right .item-right__top .item-right__desc {
+        -webkit-line-clamp: 3;
+        font-size: 12px;
+        line-height: 18px;
+    }
+    .cart-vouchers-list__item-right .item-right__bottom .item-right__btn {
+        padding: 4px 16px;
+    }
+    .cart-vouchers-list__item-right .item-right__bottom .item-right__btn span {
+        font-size: 12px;
+        line-height: unset;
+        font-weight: 500;
+    }
+    .cart-vouchers-list__item-right .item-right__bottom .item-right__expired {
+        font-size: 12px;
+    }
     .re-cart-cnt__head {
         border: none;
         border-radius: 0px;
