--- a/src/components/Map/style.css
+++ b/src/components/Map/style.css
@@ -56,6 +56,7 @@
     border-right: 1px solid #ccc;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
+
 .map .dialog-map__list::-webkit-scrollbar {
     width: 2px;
     display: block;
@@ -70,7 +71,7 @@
     right: -50%;
     transform: translate(60%, -50%);
     width: 100%;
-    height: calc(100vh - 64px);
+    max-height: calc(100vh - 64px);
     background-color: #fff;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 16px;
@@ -78,25 +79,33 @@
     overflow-y: scroll;
 }
 .head-active {
-    background-color: var(--bgWhite);
-    border-bottom: 1px solid var(--bgGray);
+    background-color: var(--bgWhite) !important;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     transition: all 0.5s;
+}
+.content-head.head-active span {
+    opacity: 1 !important;
+    visibility: visible !important;
+    transition: all 0.5s;
+}
+.map .dialog-map__content {
+    position: relative;
 }
 .map .content-head {
     height: 56px;
     width: 100%;
-    position: fixed;
+    position: sticky;
     top: 0;
-    right: 0;
     left: 0;
-    /* background-color: #8c8c8c; */
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 0.5s;
 }
 .map .content-img {
     height: 240px;
     width: 100%;
+    margin-top: -56px;
 }
 .map .content-img img {
     width: 100%;
@@ -130,8 +139,7 @@
 }
 
 .map .content-info {
-    padding: 16px 24px;
-    /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+    padding: 16px 24px 24px 24px;
     border-bottom: 1px solid rgba(204, 204, 204, 0.663);
 }
 .map .content-info .content-info__name {
@@ -218,7 +226,6 @@
 .map .map-item__address p {
     font-size: 14px;
     font-weight: bold;
-    line-height: 24px;
     color: #8c8c8c;
     margin-top: auto;
     display: -webkit-box;
