--- a/src/features/Carts/style.css
+++ b/src/features/Carts/style.css
@@ -154,7 +154,8 @@
 }
 
 .re-cart-bottom__pay {
-    align-items: flex-start;
+    align-items: center;
+    margin-top: 4px;
 }
 
 .re-cart-bottom__pay .left,
@@ -166,7 +167,7 @@
 
 .re-cart-bottom__pay .right {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .re-cart-bottom__pay .right-money {
