--- a/src/components/Map/style.css
+++ b/src/components/Map/style.css
@@ -101,6 +101,7 @@
     justify-content: center;
     align-items: center;
     transition: all 0.5s;
+    z-index: 999;
 }
 .map .content-img {
     height: 240px;
