[UPDATE] search location, direction map

--- a/src/components/Map/style.css
+++ b/src/components/Map/style.css
@@ -186,28 +186,33 @@
     margin-top: 16px;
     display: flex;
     grid-gap: 0 16px;
+    justify-content: space-between;
 }
 
 .map .content-info .content-info__wrapbtn .content-info__btn {
-    padding: 8px;
-    border: 1px solid var(--purple);
-    display: flex;
-    grid-gap: 0 6px;
-    width: 100%;
-    border-radius: 8px;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+    width: 25%;
 }
-
-.map .content-info .content-info__wrapbtn .content-info__btn img {
-    width: 20px;
+.map .content-info .content-info__wrapbtn .content-info__btn button{
+    border: none;
+    outline: none;
+    padding: 12px;
+    background-color: #fadfdf;
+    border-radius: 100%;
+    transition: all .3s;
 }
-
-.map .content-info .content-info__wrapbtn .content-info__btn span {
-    font-size: 14px;
-    color: var(--purple);
-    font-weight: bold;
+.map .content-info .content-info__wrapbtn .content-info__btn button:hover{
+    transition: all .3s;
+    opacity: 0.7;
+}
+.map .content-info .content-info__wrapbtn .content-info__btn button img{
+    width: 16px;
+    height: 16px;
+}
+.map .content-info .content-info__wrapbtn .content-info__btn span{
+    margin-top: 10px;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 600;
 }
 
 .list-org__active {
@@ -321,6 +326,7 @@
     height: 14px;
     margin-right: 6px;
 }
+
 .map .dialog-map__wrapper {
     position: absolute;
     z-index: 2;
@@ -371,12 +377,14 @@
     margin: 0px !important;
     border-radius: 100% !important;
 }
-.map-org-img-marker{
+
+.map-org-img-marker {
     width: 38px;
     height: 38px;
     border-radius: 100%;
 }
-.gm-style .gm-style-iw-tc::after{
+
+.gm-style .gm-style-iw-tc::after {
     background-color: var(--red_2) !important;
     top: -4px;
     height: 20px;
@@ -512,12 +520,9 @@
 .map .org-evaluate {
     width: 100%;
 }
-.google-map-view{
-    width: 100vw;
-    height: 100vh;
-}
+
 /* map filter container */
-.map-filter-cnt{
+.map-filter-cnt {
     position: absolute;
     z-index: 100;
     top: 0;
@@ -525,70 +530,107 @@
     right: 0;
     /* height: 100px; */
     /* background-color: burlywood; */
-    padding: 12px;
+    padding:8px;
 }
-.map-filter-cnt__left{
+
+.map-filter-cnt__left {
     width: 25%;
-    padding-right: 12px;
     position: relative;
 }
-.map-filter-cnt__input{
+
+.map-filter-cnt__input {
     width: 100%;
     position: relative;
 }
-.map-filter-cnt__input input{
+
+.map-filter-cnt__input input {
     width: 100%;
+    padding: 8px 32px 8px 12px;
+    font-size: 16px;
+    font-weight: 500;
+    box-sizing: border-box;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    outline: none;
+    text-overflow: ellipsis,
 }
-.map-filter-cnt__input-btn{
+
+.map-filter-cnt__input-btn {
     position: absolute;
     top: 0;
     right: 0;
-    margin: 8px 8px 0px 0px;
+    margin: 11px 8px 0px 0px;
 }
-.map-filter-cnt__input-btn button{
+
+.map-filter-cnt__input-btn button {
     background-color: transparent;
     border: none;
 }
-.map-filter-cnt__drop{
+
+.map-filter-cnt__drop {
     position: absolute;
-    width: calc(100% - 12px);
+    width: calc(100%);
     height: fit-content;
-   background-color: var(--bgWhite);
+    background-color: var(--bgWhite);
     margin-top: 6px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     border-radius: 3px;
 }
-.map-filter-list-org{
+
+/* .map-filter-list-org{
     padding: 12px;
-}
-.map-list-org__item{
+} */
+.map-list-org__item {
     margin: 4px 0px;
     cursor: pointer;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 14px;
+    line-height: 18px;
     font-weight: 500;
     transition: all .3s;
     padding: 2px 4px;
     border-radius: 3px;
 }
-.map-list-org__item:hover{
+
+.map-list-org__item:hover {
     background-color: var(--bg-gray);
     transition: all .3s
 }
+.map-filter-cnt__right{
+    padding-left: 8px;
+    width: 75%;
+}
+.map-filter-cnt__right-switch{
+    background-color: var(--bgWhite);
+    width: fit-content;
+    padding: 6px 6px;
+    font-size: 14px;
+    font-weight: 500;
+    box-sizing: border-box;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px rgb(0 0 0 / 30%);
+}
+
+/* end map filter */
+
 .google-map-view {
     width: 100vw;
     height: 100vh;
 }
+
 .map .content-info__galleries {
     border-bottom: 1px solid #ccc;
     padding: 16px 12px;
 }
+
 .map .galleries-title {
     font-weight: 800;
     font-size: 16px;
     line-height: 24px;
     padding: 0 4px;
 }
+
 .map .galleries-update {
     font-weight: 800;
     font-size: 14px;
@@ -596,10 +638,12 @@
     padding: 0 4px;
     color: #8c8c8c;
 }
+
 .map .galleries-list {
     width: 100%;
     padding: 16px 0 0 0;
 }
+
 .map .galleries-list .galleries-item {
     height: 150px;
     border-radius: 8px;
@@ -607,14 +651,17 @@
     position: relative;
     cursor: pointer;
 }
+
 .map .galleries-item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .map .slick-initialized .slick-slide {
     padding: 0 4px;
 }
+
 .map .galleries-btn__next,
 .map .galleries-btn__prev {
     border-radius: 100px;
@@ -628,13 +675,16 @@
     border: 1px solid rgba(204, 204, 204, 0.223);
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
+
 .map .galleries-btn__prev {
     left: -10px;
     transform: translateY(-50%) rotate(180deg);
 }
+
 .map .galleries-btn__next {
     right: -10px;
 }
+
 .map .galleries-item .item-text {
     position: absolute;
     top: 0;
@@ -646,6 +696,7 @@
     justify-content: center;
     background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.7));
 }
+
 .map .content-seemore__img {
     position: absolute;
     bottom: 15px;
@@ -662,20 +713,24 @@
     transition: all 0.3s;
     cursor: pointer;
 }
+
 .map .content-seemore__img img {
     width: 22px;
     height: 22px;
 }
+
 .map .content-seemore__img span {
     color: #fff;
     font-weight: 500;
     font-size: 14px;
 }
-.map .content-img:hover > .content-seemore__img {
+
+.map .content-img:hover>.content-seemore__img {
     visibility: visible;
     opacity: 1;
     transition: all 0.3s;
 }
+
 .map .galleries-item .item-text span {
     color: #fff;
     font-size: 13px;
@@ -700,65 +755,81 @@
     align-items: center;
     grid-gap: 0 24px;
 }
+
 .dialog-galleries__left {
     width: 33.33%;
     height: 100%;
 }
+
 .galleries-left__masonry {
     width: 100%;
     height: 100%;
     overflow-y: scroll;
 }
+
 .galleries-left__list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
+
 .galleries-left__item {
     height: 100%;
     width: 100%;
 }
+
 .galleries-left__item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .dialog-galleries__right {
     width: 66.66%;
     height: 100%;
     border: 1px solid #ccc;
 }
+
 .galleries-right__img {
     width: 100%;
     height: 100%;
 }
+
 .galleries-right__img img {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
+
 @media only screen and (max-width: 1023px) {
     .open-map {
         padding: 6px 14px;
     }
+
     .open-map p {
         font-size: 14px;
     }
+
     .map .evaluate-item p {
         font-size: 12px;
     }
+
     .map {
         width: 100vw;
         height: 100vh;
     }
+
     .map .dialog-map__wrapper {
         display: none;
     }
+
     .map .open-list__org {
         display: none;
     }
+
     .map .map-cnt {
         border-radius: unset;
     }
+
     .map .map-list__mobile {
         width: 100%;
         z-index: 2;
@@ -766,6 +837,7 @@
         bottom: 0;
         left: 0;
     }
+
     .map .map-item__mobile {
         width: 100%;
         background-color: var(--bgWhite);
@@ -777,15 +849,18 @@
         border-radius: 12px;
         align-items: center;
     }
+
     .map .map-item__mobile .item-img {
         width: 136px;
         height: 136px;
         padding: 12px;
         flex-shrink: 0;
     }
+
     .map .map-list__mobile .map-item__wrap {
         padding: 16px 6px;
     }
+
     .map .map-item__mobile .item-img img {
         border-radius: 12px;
         overflow: hidden;
@@ -794,12 +869,14 @@
         object-fit: cover;
         box-shadow: 0 8px 24px rgb(149 157 165 / 20%);
     }
+
     .map .map-item__mobile .item-content {
         padding: 12px 12px 12px 0;
         display: flex;
         flex-direction: column;
         gap: 4px 0;
     }
+
     .map .map-item__mobile .item-content__name {
         display: -webkit-box;
         -webkit-line-clamp: 2;
@@ -808,10 +885,12 @@
         text-overflow: ellipsis;
         word-break: break-word;
     }
+
     .map .map-item__mobile .item-content__name p {
         font-size: 14px;
         font-weight: bold;
     }
+
     .map .map-list__mobile .item-content__address {
         display: -webkit-box;
         -webkit-line-clamp: 3;
@@ -820,34 +899,50 @@
         text-overflow: ellipsis;
         word-break: break-word;
     }
+
     .map .map-list__mobile .item-content__address p {
         font-size: 12px;
         font-weight: bold;
         color: #8c8c8c;
     }
+
     .map .map-list__mobile .item-content__evaluate {
         display: flex;
         grid-gap: 0 8px;
     }
+
     .map .map-list__mobile .item-content__evaluate .evaluate-item {
         display: flex;
         grid-gap: 0 4px;
     }
+
     .map .map-list__mobile .evaluate-item__img {
         width: 16px;
         height: 16px;
     }
+
     .map .map-list__mobile .evaluate-item__img img {
         width: 100%;
         height: 100%;
     }
+
     .map .gm-fullscreen-control {
         display: none;
     }
+
     .map .gmnoprint {
         display: none;
     }
+
     .map .dialog-map__close {
         right: 16px;
+    }
+    .item-content__btn-direction{
+        background-color: var(--purple);
+        border: none;
+        outline: none;
+        padding: 4px 0px;
+        color: var(--bgWhite);
+        border-radius: 4px;
     }
 }
