[NEXT] reponsive home page

--- a/components/ServicePromoItem/ServicePromo.module.css
+++ b/components/ServicePromoItem/ServicePromo.module.css
@@ -1,147 +1,166 @@
 .ser_pro_item {
-    background-color: #fff;
-    border-radius: 8px;
-    cursor: pointer;
-    display: flex;
-    flex: 1 1;
-    flex-direction: column;
-    flex-shrink: 0;
-    height: 100%;
-    transition: all .4s;
-    width: 100%;
+	background-color: #fff;
+	border-radius: 8px;
+	cursor: pointer;
+	display: flex;
+	flex: 1 1;
+	flex-direction: column;
+	flex-shrink: 0;
+	height: 100%;
+	transition: all 0.4s;
+	width: 100%;
 }
 
 .ser_img_cnt {
-    position: relative;
+	position: relative;
 }
 
 .ser_img {
-    border-radius: 8px 8px 0 0;
-    height: 182px;
-    object-fit: cover;
-    width: 100%;
+	border-radius: 8px 8px 0 0;
+	height: 182px;
+	object-fit: cover;
+	width: 100%;
 }
 
 .ser_promo {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-between;
-    position: absolute;
-    top: 0;
-    width: 100%;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	justify-content: space-between;
+	position: absolute;
+	top: 0;
+	width: 100%;
 }
 
 .ser_promo__percent {
-    background-color: var(--red-cl);
-    border-radius: 4px;
-    -webkit-clip-path: polygon(100% 0, 100% 61%, 90% 100%, 0 100%, 0 0);
-    clip-path: polygon(100% 0, 100% 61%, 90% 100%, 0 100%, 0 0);
-    color: #FFF;
-    font-size: 14px;
-    font-weight: 700;
-    margin: -8px 0 0 -6px;
-    padding: 4px 0;
-    text-align: center;
-    width: 90px;
+	background-color: var(--red-cl);
+	border-radius: 4px;
+	-webkit-clip-path: polygon(100% 0, 100% 61%, 90% 100%, 0 100%, 0 0);
+	clip-path: polygon(100% 0, 100% 61%, 90% 100%, 0 100%, 0 0);
+	color: #fff;
+	font-size: 14px;
+	font-weight: 700;
+	margin: -8px 0 0 -6px;
+	padding: 4px 0;
+	text-align: center;
+	width: 90px;
 }
 
 .ser_promo__percent::after {
-    background-color: #ff9e90;
-    content: "";
-    height: 20px;
-    margin: 12px 0 0 4px;
-    position: absolute;
-    width: 20px;
+	background-color: #ff9e90;
+	content: '';
+	height: 20px;
+	margin: 12px 0 0 4px;
+	position: absolute;
+	width: 20px;
 }
 
 .ser_promo__bot {
-    display: flex;
-    align-items: center;
-    bottom: 8px;
-    left: 8px;
-    position: absolute;
+	display: flex;
+	align-items: center;
+	bottom: 8px;
+	left: 8px;
+	position: absolute;
 }
 
 .ser_promo__bot_start {
-    display: flex;
-    align-items: center;
-    background-color: #FFF;
-    border-radius: 6px;
-    font-size: 12px;
-    font-weight: 700;
-    margin-right: 6px;
-    padding: 2px 8px;
-    grid-gap: 0 4px;
-    gap: 0 4px;
+	display: flex;
+	align-items: center;
+	background-color: #fff;
+	border-radius: 6px;
+	font-size: 12px;
+	font-weight: 700;
+	margin-right: 6px;
+	padding: 2px 8px;
+	grid-gap: 0 4px;
+	gap: 0 4px;
 }
 .ser_img__org_logo {
-    background-color: var(--bg-white);
-    border: 1px solid #7161ba9c;
-    border-radius: 100%;
-    bottom: 5px;
-    position: absolute;
-    right: 5px;
-    width: 35px;
+	background-color: var(--bg-white);
+	border: 1px solid #7161ba9c;
+	border-radius: 100%;
+	bottom: 5px;
+	position: absolute;
+	right: 5px;
+	width: 35px;
 }
 .ser_pro_item__cnt {
-    background-color: #fff;
-    border-radius: 0 0 8px 8px;
-    display: flex;
-    flex: 1 1;
-    flex-direction: column;
-    flex-shrink: 0;
-    gap: 4px 0;
-    overflow: hidden;
-    padding: 8px;
+	background-color: #fff;
+	border-radius: 0 0 8px 8px;
+	display: flex;
+	flex: 1 1;
+	flex-direction: column;
+	flex-shrink: 0;
+	gap: 4px 0;
+	overflow: hidden;
+	padding: 8px;
 }
 .ser_name {
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    color: var(--text-black);
-    display: -webkit-box;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 16px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    word-break: break-word;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	color: var(--text-black);
+	display: -webkit-box;
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 16px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-word;
 }
 .ser_price {
-    display: flex;
-    flex-direction: column;
-    margin-top: auto;
+	display: flex;
+	flex-direction: column;
+	margin-top: auto;
 }
-.ser_price_special{
-    color: var(--red-cl);
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 18px;
+.ser_price_special {
+	color: var(--red-cl);
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 18px;
 }
-.ser_price_old{
-    color: var(--text-hover);
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 14px;
-    text-decoration: line-through;
+.ser_price_old {
+	color: var(--text-hover);
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 14px;
+	text-decoration: line-through;
 }
 .ser_org_address {
-    align-items: flex-start;
-    display: flex;
-    flex-direction: row;
+	align-items: flex-start;
+	display: flex;
+	flex-direction: row;
 }
 .ser_org_address_p {
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    color: grey;
-    display: -webkit-box;
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 18px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    word-break: break-word;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	color: grey;
+	display: -webkit-box;
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 18px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-word;
 }
-.ser_org_address img{
-    margin: 3px 4px 0px 0px !important;
+.ser_org_address img {
+	margin: 3px 4px 0px 0px !important;
+}
+@media screen and (max-width: 767.98px) {
+	.ser_pro_item {
+		flex-shrink: 0;
+		display: flex;
+		flex-direction: column;
+		flex: 1;
+		height: 100%;
+		width: 164px;
+		border: 1px solid #ccc;
+	}
+	.ser_img {
+		height: 164px;
+	}
+	.ser_img img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
 }
