--- a/components/layout/Header/Header.module.css
+++ b/components/layout/Header/Header.module.css
@@ -118,3 +118,23 @@
 	color: var(--purple);
 	font-weight: bold;
 }
+@media screen and (max-width: 1023.98px) {
+	.headerWrap {
+		padding: 24px 16px;
+		grid-gap: 0 24px;
+	}
+	.headerSearchBot {
+		display: none;
+	}
+	.headerLeft {
+		width: 40%;
+	}
+	.headerRight {
+		width: 60%;
+	}
+}
+@media screen and (max-width: 767.98px) {
+	.header {
+		display: none;
+	}
+}
