--- a/components/home/home.module.css
+++ b/components/home/home.module.css
@@ -74,3 +74,69 @@
 	transition: all 0.2s ease-in;
 }
 /* end home province */
+
+/* reponsive */
+@media screen and (max-width: 767.98px) {
+	.province {
+		padding: 16px 0 0 0;
+		margin: 16px 0 0 0;
+	}
+	.provinceList {
+		grid-gap: 12px;
+		display: grid;
+		gap: 12px;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(4, 1fr);
+		height: 100%;
+		margin-top: 16px;
+		padding: 0 12px;
+	}
+	.provinceItem:first-child {
+		grid-column: 1/2;
+		grid-row: 1/3;
+	}
+	.provinceItem:nth-child(2) {
+		grid-column: 2/3;
+		grid-row: 2/3;
+	}
+	.provinceItem:nth-child(3) {
+		grid-column: 2/3;
+		grid-row: 1/2;
+	}
+	.provinceItem:nth-child(4) {
+		grid-column: 2/3;
+		grid-row: 3/5;
+	}
+	.provinceItem:nth-child(5) {
+		grid-column: 1/2;
+		grid-row: 3/4;
+	}
+	.provinceItem:nth-child(6) {
+		grid-column: 1/2;
+		grid-row: 4/5;
+	}
+	.provinceContent {
+		background-color: unset;
+	}
+	.provinceTitle {
+		color: white;
+		font-size: 14px;
+		font-weight: 700;
+		line-height: 18px;
+	}
+	.provinceTotal {
+		color: white;
+		font-size: 14px;
+		font-weight: 700;
+		line-height: 20px;
+	}
+	.provinceItem img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		filter: grayscale(10%) brightness(70%);
+		-webkit-filter: grayscale(10%) brightness(70%);
+		-moz-filter: grayscale(10%) brightness(70%);
+		transition: all 0.2s ease-in;
+	}
+}
