--- a/pages/seemoreProvince/seemoreProvince.module.css
+++ b/pages/seemoreProvince/seemoreProvince.module.css
@@ -2,6 +2,7 @@
 	padding-bottom: 16px;
 	background-color: #fff;
 }
+
 .seemoreList {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
@@ -11,9 +12,45 @@
 .seemoreItem {
 	border-radius: 10px;
 	overflow: hidden;
+	position: relative;
 }
 .seemoreItem img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	filter: grayscale(10%);
+	-webkit-filter: grayscale(10%);
+	-moz-filter: grayscale(10%);
+	transition: all 0.2s ease-in;
+}
+.seemoreItem img:hover {
+	transform: scale(1.025);
+	filter: saturate(170%);
+	-webkit-filter: saturate(170%);
+	-moz-filter: saturate(170%);
+	transition: all 0.2s ease-in;
+}
+.seemoreTitle {
+	color: var(--red-cl);
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 18px;
+}
+.seemoreTotal {
+	color: var(--text-black);
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 20px;
+}
+.seemoreContent {
+	background-color: var(--bg-white);
+	border-radius: 8px;
+	bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	margin-left: 10px;
+	padding: 4px 10px;
+	position: absolute;
+}
+@media screen and (max-width: 767.98px) {
 }
