--- a/pages/seemoreProvince/seemoreProvince.module.css
+++ b/pages/seemoreProvince/seemoreProvince.module.css
@@ -7,7 +7,7 @@
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	grid-gap: 16px;
-	padding: 0 16px;
+	padding: 16px;
 }
 .seemoreItem {
 	border-radius: 10px;
@@ -53,4 +53,37 @@
 	position: absolute;
 }
 @media screen and (max-width: 767.98px) {
+	.seemoreList {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-gap: 12px;
+		padding: 16px;
+	}
+	.seemoreContent {
+		background-color: unset;
+	}
+
+	.seemoreTitle {
+		color: white;
+		font-size: 14px;
+		font-weight: 700;
+		line-height: 18px;
+	}
+
+	.seemoreTotal {
+		color: white;
+		font-size: 14px;
+		font-weight: 700;
+		line-height: 20px;
+	}
+
+	.seemoreItem img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		filter: grayscale(10%) brightness(70%);
+		-webkit-filter: grayscale(10%) brightness(70%);
+		-moz-filter: grayscale(10%) brightness(70%);
+		transition: all 0.2s ease-in;
+	}
 }
