--- a/styles/globals.css
+++ b/styles/globals.css
@@ -202,6 +202,36 @@ body > iframe {
 	display: none !important;
 }
 
+/* cus dot slider */
+.slick-dots ul {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+.slick-dots ul li {
+	width: 6px;
+	height: 6px;
+	border-radius: 100%;
+	background-color: #fff;
+	opacity: 0.7;
+}
+.slick-dots ul .slick-active {
+	background-color: var(--purple);
+	width: 10px;
+	height: 10px;
+	opacity: 1;
+}
+.slick-dots li.slick-active button:before {
+	display: none;
+}
+.slick-dots li button:before {
+	display: none;
+}
+
+.slick-dots {
+	bottom: 20px;
+}
+
 @media only screen and (max-width: 1023px) {
 	html {
 		background-color: #fff;
